--- a/package.json
+++ b/package.json
@@ -1,20 +1,6 @@
 {
-  "name": "discord-counting-bot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "type": "module",
-  "scripts": {
-    "build": "tsc",
-    "start": "node ."
-  },
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "@tsconfig/node18": "^18.2.4",
-    "typescript": "^5.4.5"
-  },
-  "dependencies": {
-    "discord.js": "^14.14.1"
-  }
+  "name": "@discord-counting-bot/empty",
+  "workspaces": [
+    "packages/*"
+  ]
 }
