--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,6 +15,7 @@
       "typescript": "^5.4.5"
     },
     "dependencies": {
+      "@discord-counting-bot/core": "^1.0.0",
       "discord.js": "^14.14.1"
     }
   }
