📰 add formatting scripts

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,7 +7,9 @@
     "scripts": {
       "build": "tsc",
       "start": "node .",
-      "lint": "eslint"
+      "lint": "eslint",
+      "format": "prettier . --check",
+      "format:fix": "prettier . --write"
     },
     "author": "",
     "license": "MIT",
