--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   ],
   "scripts": {
     "build": "turbo build",
-    "lint": "turbo lint"
+    "lint": "turbo lint",
+    "format": "turbo format",
+    "format:fix": "turbo format:fix"
   },
   "devDependencies": {
+    "prettier": "^3.2.5",
     "@eslint/js": "^9.1.1",
     "eslint": "^8.57.0",
     "turbo": "^1.13.3",
