--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,7 +15,8 @@
   ],
   "scripts": {
     "build": "tsc",
-    "start": "node ."
+    "start": "node .",
+    "lint": "eslint"
   },
   "author": "",
   "license": "MIT",
