--- a/packages/registrator/package.json
+++ b/packages/registrator/package.json
@@ -6,7 +6,8 @@
     "type": "module",
     "scripts": {
         "build": "tsc",
-        "start": "node ."
+        "start": "node .",
+        "lint": "eslint"
     },
     "author": "",
     "license": "MIT",
