--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "turbo build"
+    "build": "turbo build",
+    "lint": "turbo lint"
   },
   "devDependencies": {
-    "turbo": "^1.13.3"
+    "@eslint/js": "^9.1.1",
+    "eslint": "^8.57.0",
+    "turbo": "^1.13.3",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.1"
   }
 }
