--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,8 @@
 {
     "$schema": "https://turbo.build/schema.json",
     "pipeline": {
-        "build": {}
+        "build": {"dependsOn": ["lint"]},
+        "lint": {}
     },
     "globalDependencies": [
         "tsconfig.json"
