--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
+    "@tsconfig/node18": "^18.2.4",
     "eslint": "^8.57.0",
     "turbo": "^1.13.3",
     "typescript": "^5.4.5",
