--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,10 +15,11 @@
   ],
   "scripts": {
     "build": "tsc",
+    "clean": "rm -rf node_modules dist",
     "start": "node .",
     "lint": "eslint",
     "format": "prettier . --check",
-    "format:fix": "prettier . --write"
+    "fix": "prettier . --write"
   },
   "author": "",
   "license": "MIT",
