--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   ],
   "scripts": {
     "build": "turbo build",
+    "clean": "turbo clean && rm -rf node_modules",
     "lint": "turbo lint",
     "format": "turbo format",
-    "format:fix": "turbo format:fix"
+    "fix": "turbo fix"
   },
   "devDependencies": {
     "prettier": "^3.2.5",
